Replacing ofOrNull -> fromTypeName, using Jsons.unknownValueException